homelab-gitops/apps/media/base/plex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: media
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - plex.thundertest.org
      secretName: plex-tls
  rules:
    - host: plex.thundertest.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 80
    - host: plex.thundertest.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
